@@ -3,6 +3,7 @@ Version: 0.4.3
 Date: ??. 10. 2022
   Features:
     - Add runtime setting: vehicle speed modifier
+    - Spawn some of the effect beacons before round start to entice the player.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: 04. 10. 2022
